--- a/style.css
+++ b/style.css
@@ -5,19 +5,24 @@ body {
 header {
     text-align: center;
     border: 1px solid black;
-    margin: 50px;
     background-color: white;
-    width: 200px;
-    margin-left: 45%;
+    width: 170px;
+    margin-left: 50%;
 }
 a {
     text-decoration: none;
     color: #3498db;
 }
-article {
+.container {
+    display: grid;
+    column-gap: 50px;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+}
+.grid-item {
     background-color: white;
     border: 1px solid black;
+    padding: 20px;
+    text-align: center;
     margin-bottom: 20px;
-    margin-right: 80%;
-    display: grid;
 }
