--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ header {
     border: 1px solid black;
     background-color: white;
     width: 170px;
-    margin-left: 50%;
+    margin-left: 44%;
+    margin-bottom: 50px;
+    margin-top: 50px;
 }
 a {
     text-decoration: none;
@@ -15,7 +17,7 @@ a {
 }
 .container {
     display: grid;
-    column-gap: 50px;
+    column-gap: 30px;
     grid-template-columns: auto auto auto;
     padding: 10px;
 }
@@ -23,6 +25,5 @@ a {
     background-color: white;
     border: 1px solid black;
     padding: 20px;
-    text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
